--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@keyframes slide {
+    from {
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+
+
+
 * {
     font-family: monospace;
     margin: 0;
@@ -16,21 +29,26 @@ body{
     display: none;
 }
 .container {
-    width:30rem;
-    padding: 1.5rem;
+    max-width:30rem;
+    padding: 2.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    /* position: absolute; */
     background-color: #181b1f;
     box-shadow: 0rem 0rem 0.5rem #0e0e0e;
-    border-radius: 0.5rem; 
+    border-radius: 0.5rem;
+    transform: translateX(-2rem);
+    animation: .3s;
+    animation-fill-mode: forwards;
 }
+
 
 p {
     font-size: 1.5rem;
     color: #626a74;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2.5rem;
 }
 
 
@@ -38,7 +56,7 @@ p {
 
 
 #time, #input-intervalo, .btn {
-    margin-bottom: 1.5rem;
+    margin-bottom: 2.5rem;
     cursor: pointer;
     padding: 0.5rem;
     outline: none;
@@ -53,16 +71,12 @@ p {
 
 .btn{
     width: 10rem;
-    margin-bottom: 0;
+    margin-bottom: 0rem;
     background-color: #6d07b1;
     color: #d99fff;
     box-shadow: 0rem 0rem 0.3rem #1a0129;
 }
 
-#input-intervalo::placeholder {
-    text-align: center;
-    color: #ff9100;
-}
 
 #time {
     width: auto;
@@ -70,25 +84,32 @@ p {
 
 
 input[type="time"]::-webkit-calendar-picker-indicator {
-    filter: invert(0.5) sepia(1) saturate(5) hue-rotate(175deg);
-    /* display: none; */
-    display: none;
-    font-size: 2rem;
-    background-color: #626a74;
-    position: absolute;
+    filter: invert(0.5) sepia() saturate(5) hue-rotate();
+    color: #ff9100;
  }
 
 .contador {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2.5rem;
+
 }
 
 .bx {
+    position: absolute;
     cursor: pointer;
-    font-size: 2.5rem;
-    color: #ff9100;
+    font-size: 3rem;
+    color: #6d07b1;
+    text-shadow: 0rem 0rem 0.2rem #1a0129;
+}
+
+.bxs-left-arrow{
+    left:7rem;
+}
+
+.bxs-right-arrow {
+    right:7rem;
 }
 
 #interval-text {
@@ -96,10 +117,14 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     margin-right: 1rem;
     color: #ff9100;
     font-size: 1.5rem;
+    animation-duration: 300ms;
+    animation-fill-mode: forwards;
 }
 
 #new-time {
     color: #ff9100;
+    
+    
 }
 
 
