--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body{
     justify-content: space-around;
     align-items: center;
     background-color: #181b1f;
-    height: 100vh;
 }
 #container-02, #container-03, #container-04 {
     display: none;
@@ -35,7 +34,7 @@ body{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    /* position: absolute; */
+    position: relative;
     background-color: #181b1f;
     box-shadow: 0rem 0rem 0.5rem #0e0e0e;
     border-radius: 0.5rem;
@@ -83,10 +82,10 @@ p {
 }
 
 
-input[type="time"]::-webkit-calendar-picker-indicator {
+/* input[type="time"]::-webkit-calendar-picker-indicator {
     filter: invert(0.5) sepia() saturate(5) hue-rotate();
     color: #ff9100;
- }
+ } */
 
 .contador {
     display: flex;
@@ -105,11 +104,11 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 }
 
 .bx-chevrons-left{
-    left:7rem;
+    left:7em;
 }
 
 .bx-chevrons-right {
-    right:7rem;
+    right:7em;
 }
 
 #interval-text {
@@ -127,9 +126,21 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     
 }
 
+#last-p{
+    margin-bottom: 0;
+}
+
 @media only screen and (max-width: 600px) {
     body {
-        padding: 1rem;
+        padding: 5rem;
+    }
+
+    .bx-chevrons-left{
+        left:1rem;
+    }
+
+    .bx-chevrons-right {
+        right:1rem;
     }
 }
 
