--- a/style.css
+++ b/style.css
@@ -132,15 +132,19 @@ p {
 
 @media only screen and (max-width: 600px) {
     body {
-        padding: 5rem;
+        padding: 3rem;
     }
 
     .bx-chevrons-left{
-        left:1rem;
+        left:5rem;
     }
 
     .bx-chevrons-right {
-        right:1rem;
+        right:5rem;
+    }
+
+    *{
+        font-size: 10px;
     }
 }
 
