--- a/style.css
+++ b/style.css
@@ -16,6 +16,17 @@
     margin: 0;
     padding: 0;
     border: none;
+
+    -webkit-touch-callout: none;  /* iPhone OS, Safari */
+    -webkit-user-select: none;    /* Chrome, Safari 3 */
+    -khtml-user-select: none;     /* Safari 2 */
+    -moz-user-select: none;       /* Firefox */
+    -ms-user-select: none;        /* IE10+ */
+    user-select: none;            /* Possível implementação no futuro */
+    /* cursor: default; */
+
+    -webkit-tap-highlight-color: transparent;
+
 }
 body{
     padding: 50px;
